[package]
name = "hypr-toggle-special-workspace"
version = "2024.8.14"
edition = "2024"

[dependencies]
clap = { version = "4.5.53", features = ["cargo", "string"] }
color-eyre = "0.6.5"
dirs = "6.0.0"
eyre = "0.6.12"
hyprland = { git = "https://github.com/hyprland-community/hyprland-rs.git" }
regex = "1.12.2"
serde = "1.0.228"
serde_with = "3.16.1"
toml = "0.9.10"

[lints.clippy]
all = "warn"
nursery = "warn"
pedantic = "warn"
